variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: value <> is not a member of Int
while (nbPas <>0){recule()}
             ^